--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,34 +1,34 @@
 format = """\
-[](bg:#030B16 fg:#7DF9AA)\
-[󰀵 ](bg:#7DF9AA fg:#090c0c)\
-[](fg:#7DF9AA bg:#1C3A5E)\
+[](bg:#170309 fg:#170309)\
+[󰀵 ](bg:#170309 fg:#F9215D)\
+[](fg:#170309 bg:#F9215D)\
 $time\
-[](fg:#1C3A5E bg:#3B76F0)\
+[](fg:#F9215D bg:#170309)\
 $directory\
-[](fg:#3B76F0 bg:#FCF392)\
+[](fg:#170309 bg:#F9215D)\
 $git_branch\
 $git_status\
 $git_metrics\
-[](fg:#FCF392 bg:#030B16)\
+[](fg:#F9215D bg:#170309)\
 $character\
 """
 
 [directory]
 format = "[  $path ]($style)"
-style = "fg:#E4E4E4 bg:#3B76F0"
+style = "fg:#F9215D bg:#170309"
 
 [git_branch]
 format = '[ $symbol$branch(:$remote_branch) ]($style)'
 symbol = "  "
-style = "fg:#1C3A5E bg:#FCF392"
+style = "fg:#170309 bg:#F9215D"
 
 [git_status]
 format = '[$all_status]($style)'
-style = "fg:#1C3A5E bg:#FCF392"
+style = "fg:#170309 bg:#F9215D"
 
 [git_metrics]
 format = "([+$added]($added_style))[]($added_style)"
-added_style = "fg:#1C3A5E bg:#FCF392"
+added_style = "fg:#170309 bg:#F9215D"
 deleted_style = "fg:bright-red bg:235"
 disabled = false
 
@@ -41,11 +41,11 @@ format = "[  $duration ]($style)"
 style = "fg:bright-white bg:18"
 
 [character]
-success_symbol = '[ ➜](bold green) '
-error_symbol = '[ ✗](#E84D44) '
+success_symbol = '[ ➜](#F9215D) '
+error_symbol = '[ ✗](#f14c4c) '
 
 [time]
 disabled = false
 time_format = "%R" # Hour:Minute Format
-style = "bg:#1d2230"
-format = '[[ 󱑍 $time ](bg:#1C3A5E fg:#8DFBD2)]($style)'
+style = "bg:#170309"
+format = '[[ 󱑍 $time ](bg:#F9215D fg:#170309)]($style)'
